河上コーディング課題　レベル1、2、3

--- a/html/level1/level1.html
+++ b/html/level1/level1.html
@@ -8,7 +8,8 @@
 
     <meta charset="utf-8">
 
-    <title></title>
+    <title>コーディング課題1</title>
+
 
 
 
@@ -188,7 +189,7 @@
     </div>
 
 
-<!--　ーここから！！！！！！！！！！-->
+<!--　copyrightーここから！！！！！！！！！！-->
 
 
     <div class=" copyright-wrapper">
@@ -203,30 +204,7 @@
     </div>
 
 
-<!--　ーここから！！！！！！！！！！-->
 
-
-    <div class=" -wrapper">
-      <div class="container">
-
-
-
-      </div>
-
-    </div>
-
-
-<!--　ーここから！！！！！！！！！！-->
-
-
-    <div class=" -wrapper">
-      <div class="container">
-
-
-
-      </div>
-
-    </div>
 
 
 
